--- a/vis/src/components/Filters/FiltersMenu.scss
+++ b/vis/src/components/Filters/FiltersMenu.scss
@@ -1,9 +1,8 @@
 @import "../../vars";
 @import "../../utils";
 
-button.logo-icon {
-  --logo-size: 48px;
-  padding: 1rem;
+.filters-menu {
+  z-index: var(--z-always-visible);
 }
 
 .button {
@@ -14,6 +13,13 @@ button.logo-icon {
   border: none;
   background-color: green;
   @include focusable(var(--clr-bgMain));
+  &--square {
+    height: 48px;
+    width: 48px;
+  }
+  &--overlay {
+    z-index: var(--z-always-visible);
+  }
   &--default {
     color: var(--clr-fgText);
     background-color: var(--clr-bgMain);
@@ -21,13 +27,14 @@ button.logo-icon {
   &--primary {
     color: var(--clr-bg);
     background-color: $accent;
+    @include focusable(var(--clr-bg));
   }
-  &:focus-visible {
-    &--default {
-      outline-color: $accent;
-    }
-    &--primary {
-      outline-color: white;
-    }
+  &--secondary {
+    color: $accent;
+    background-color: var(--clr-bg);
+  }
+  &--transparent {
+    background-color: transparent;
+    @include focusable($accent);
   }
 }
