--- a/vis/src/components/Filters/Filters.scss
+++ b/vis/src/components/Filters/Filters.scss
@@ -37,6 +37,9 @@
       padding: .75rem 1rem;
       cursor: pointer;
       border-radius: 8px;
+      display: flex;
+      flex-direction: row;
+      justify-content: flex-start;
       &:hover {
         text-decoration: underline;
       }
